Add implementação de Lembretes e BroadCast Receiver para notificações

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,29 @@
     <string name="menu_op_refeicoes">Refeições</string>
     <string name="menu_op_agua">Água</string>
     <string name="menuactivity_title">Seus Lembretes</string>
-    <string name="title_activity_lista_remedios">Lista de Remedios</string>
-    <string name="title_activity_remedios">Remedios</string>
-    <string name="search_hint">Buscar</string>
+    <string name="title_activity_remedios">Remédios</string>
+    <string name="nome_do_remedio">Nome do remédio</string>
+    <string name="data_hora_inicio_uso">Data e hora de início do uso</string>
+    <string name="botao_salvar">Salvar</string>
+    <string name="botao_cancelar">Cancelar</string>
+    <string name="segunda_feira">Segunda-feira</string>
+    <string name="terca_feira">Terça-feira</string>
+    <string name="quarta_feira">Quarta-feira</string>
+    <string name="quinta_feira">Quinta-feira</string>
+    <string name="sexta_feira">Sexta-feira</string>
+    <string name="sabado">Sábado</string>
+    <string name="domingo">Domingo</string>
+    <string name="dosagem">Dosagem</string>
+    <string name="dias_uso_remedio">Quantos dias</string>
+    <string name="rotina_uso">Rotina de uso do remédio</string>
+    <string name="uso__continuo">Uso contínuo</string>
+    <string name="uso__tempo_determinado">Uso por tempo determinado</string>
+    <string name="tempo_uso">Tempo de uso</string>
+    <string name="rotina_diariamente">Diariamente</string>
+    <string name="rotina_dias_alternados">Dias alternados</string>
+    <string name="PrincipioAtivo">Princípio Ativo:</string>
+    <string name="NomeLaboratorio">Laboratório:</string>
+    <string name="ClasseTerapeutica">Classe Terapêutica:</string>
+    <string name="tarja">Tarja</string>
+    <string name="intervaloHoras">Intervalo de horas</string>
 </resources>
